--- a/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
@@ -1,3 +1,11 @@
 <div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
-    <span>Implementation of disponibility page</span>
+    <h1>Selected Dates:</h1>
+    <div class="results">
+      <div *ngFor="let date of dates">
+        {{ date.zone("+09:00").format('YYYY/MM/DD') }}
+      </div>
+    </div>
+    <div (click)="$event.stopPropagation()" class="drop-calendar">
+      <mat-calendar #calendar (selectedChange)="select($event,calendar)"  [dateClass]="dateClass()"></mat-calendar>
+    </div>
 </div>
