--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/scss/styles.scss';
 @import '~animate.css/animate.min';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
