--- a/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
@@ -1,11 +1,14 @@
 <div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
-  <!--   <h1>Selected Dates:</h1>
+  <h1>Selected Dates:</h1>
   <div class="results">
     <div *ngFor="let date of datesAndHours">
       {{ date.date.zone("+09:00").format('YYYY/MM/DD') }}
-      {{date.hour}}
+      ///
+      {{date.startHour}}
+      ///
+      {{date.finishHour}}
     </div>
-  </div> -->
+  </div>
   <div class="py-5 border-b-2">
     <h1 class="popping text-xl font-bold ">Disponibilité</h1>
   </div>
@@ -22,22 +25,34 @@
       <div [@openModal]="timePickerModalShow"
         class="inline-block align-bottom bg-white rounded-lg  py-8 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:p-6">
         <div class="flex justify-center mt-2">
-          <div class=" text-center sm:mt-0 sm:ml-4 sm:text-left">
-            <div class="ngx-timepicker-field-example">
-              <ngx-timepicker-field [format]="24" [buttonAlign]="'left'" [defaultTime]="selectedHour"
-                (timeChanged)="timeChanged($event)">
+          <h1>De</h1>
+          <div class="text-center sm:mt-0 sm:ml-4 sm:text-left">
+             <div class="ngx-timepicker-field-example">
+              <ngx-timepicker-field [format]="24" [buttonAlign]="'left'" [defaultTime]="selectedStartHour"
+                (timeChanged)="startTimeChanged($event)">
               </ngx-timepicker-field>
             </div>
           </div>
+
+        </div>
+        <div class="flex  justify-center mt-2">
+          <h1>à</h1>
+          <div class="text-center sm:mt-0 sm:ml-4 sm:text-left">
+            <div class="ngx-timepicker-field-example">
+              <ngx-timepicker-field [format]="24" [buttonAlign]="'left'" [defaultTime]="selectedFinishHour"
+                (timeChanged)="finishTimeChanged($event)">
+              </ngx-timepicker-field>
+            </div>
+          </div>
+
         </div>
         <div class="mt-5 w-full">
-          <button type="button" (click)="pickDisponibily()" [disabled]="!this.selectedHour"
-            [ngClass]="!this.selectedHour ? 'bg-gray-500 text-gray-200' : 'bg-blue-300 text-base  text-white hover:bg-blue-600'"
+          <button type="button" (click)="pickDisponibily()" [disabled]="!this.selectedStartHour"
+            [ngClass]="!this.selectedStartHour ? 'bg-gray-500 text-gray-200' : 'bg-blue-300 text-base  text-white hover:bg-blue-600'"
             class="w-full inline-flex justify-center rounded-md border border-transparent font-medium shadow-sm px-4 py-2  focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-200  sm:w-full sm:text-sm">
             Choisir
           </button>
         </div>
-
       </div>
     </div>
   </div>
