--- a/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
@@ -64,7 +64,7 @@
                     fill="#6FB4E1" />
             </svg>
             <span class="ml-2">Précédent</span>
-        </button>
-        <button
+        </button> 
+        <button (click) ="addGood()"
             class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
     </div>
