--- a/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
@@ -2,7 +2,7 @@
     <div class="bg-gray-4 mt-5  rounded-2xl pb-10">
         <div class="space-y-4">
             <div class="aspect-w-3   aspect-h-1 relative">
-                <img class="object-cover shadow-lg rounded-lg" src="../../../../assets/images/bien1.png" alt="">
+                <img class="object-cover shadow-lg rounded-lg" src="{{imageUrl}}" alt="">
                 <div class="flex flex-row justify-between items-end px-5 pb-5">
                     <span
                         class="inline-flex items-center  px-3 py-1 rounded-full text-xs font-medium bg-red-400 text-white popping">
