--- a/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
@@ -1,8 +1,70 @@
 <div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
     <div class="bg-gray-4 mt-5  rounded-2xl pb-10">
-        <div class="space-y-4">
-            <div class="aspect-w-3   aspect-h-1 relative">
-                <img class="object-cover shadow-lg rounded-lg" src="{{imageUrl}}" alt="">
+        <div class="space-y-4 ">
+            <div class="aspect-w-3  relative  aspect-h-1 ">
+                <div class="absolute inset-0 transition-all ease-in-out duration-1000 transform translate-x-0 slide"
+                    *ngFor="let media of medias ;let i = index">
+                    <img class="object-cover 	 shadow-lg rounded-lg w-full h-full"
+                        *ngIf="i == counter && medias[counter].type == 'image'" @fade
+                        [defaultImage]="'../../../../../../assets/images/blank.png'" [lazyLoad]="medias[counter].url" />
+                    <video class="object-cover z-50  shadow-lg rounded-lg w-full h-full" autoplay
+                        *ngIf="i == counter && medias[counter].type == 'video'" [src]="medias[counter].url"
+                        frameborder="0" allowfullscreen></video>
+                </div>
+                <div
+                    class="absolute inset-0 z-50 transition-all ease-in-out duration-1000 transform translate-x-0 slide">
+
+
+                </div>
+                <div class="absolute aspect-w-1 z-50	 w-16 h-16 left-auto right-0  top-1/2 -translate-y-1/2 cursor-pointer  "
+                    (click)="nextSlide()">
+                    <svg width="41" height="58" viewBox="0 0 41 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d)">
+                            <path
+                                d="M26.6766 30.1363L16.2739 43.8017C16.0461 44.1034 15.7251 44.2872 15.3813 44.3128C15.0376 44.3384 14.6992 44.2038 14.4404 43.9384C14.182 43.6724 14.0246 43.2975 14.0026 42.8962C13.9807 42.4948 14.096 42.0996 14.3233 41.7974L23.9589 29.1341L14.3233 16.4708C14.1132 16.1661 14.0118 15.7785 14.0405 15.3887C14.0691 14.9988 14.2255 14.637 14.477 14.3785C14.7285 14.12 15.0558 13.9849 15.3906 14.0013C15.7253 14.0177 16.0418 14.1844 16.2739 14.4666L26.6766 28.132C26.8851 28.4091 27.0001 28.7653 27.0001 29.1341C27.0001 29.503 26.8851 29.8592 26.6766 30.1363Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d" x="0.819167" y="0.819167" width="39.3617" height="56.6776"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset />
+                                <feGaussianBlur stdDeviation="6.59042" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.55 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+
+
+                </div>
+                <div class=" px-5 aspect-w-1 z-50 left-0	top-1/2 -translate-y-1/2 w-16 h-16 mr-16 justify-center  cursor-pointer"
+                    (click)="previousSlide()">
+                    <svg width="41" height="58" viewBox="0 0 41 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d)">
+                            <path
+                                d="M14.3234 27.8637L24.7261 14.1983C24.9539 13.8966 25.2749 13.7128 25.6187 13.6872C25.9624 13.6616 26.3008 13.7962 26.5596 14.0616C26.818 14.3276 26.9754 14.7025 26.9974 15.1038C27.0193 15.5052 26.904 15.9004 26.6767 16.2026L17.0411 28.8659L26.6767 41.5292C26.8868 41.8339 26.9882 42.2215 26.9595 42.6113C26.9309 43.0012 26.7745 43.363 26.523 43.6215C26.2715 43.88 25.9442 44.0151 25.6094 43.9987C25.2747 43.9823 24.9582 43.8156 24.7261 43.5334L14.3234 29.868C14.1149 29.5909 13.9999 29.2347 13.9999 28.8659C13.9999 28.497 14.1149 28.1408 14.3234 27.8637Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d" x="0.819167" y="0.503737" width="39.3617" height="56.6776"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset />
+                                <feGaussianBlur stdDeviation="6.59042" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.55 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+
+                </div>
                 <div class="flex flex-row justify-between items-end px-5 pb-5">
                     <span
                         class="inline-flex items-center  px-3 py-1 rounded-full text-xs font-medium bg-red-400 text-white popping">
@@ -15,7 +77,7 @@
             <div class="px-3">
                 <div class=" leading-6 popping font-semibold space-y-2">
                     <h3 class="text-base md:text-3xl truncate leading-6 md:leading-9">
-                         {{good.propertyName}}
+                        {{good.propertyName}}
                     </h3>
                     <div class="flex flex-row items-center">
                         <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
@@ -36,16 +98,14 @@
                     </ul>
                     <div class=" mt-5">
                         <div class="popping font-normal px-5">
-                           {{good.description}}:
-
                             <ul class="list-disc ">
                                 <li>Cuisine ouverte (sans lave-vaisselle)</li>
                                 <li>Pièce à vivre: {{good.numberOfRooms}}</li>
                                 <li>Salle de bain: {{good.numberOfBathRooms}}</li>
                             </ul>
+                            <div [innerHTML]="good.description">
+                            </div>
 
-
-                            {{good.description}}
 
                         </div>
                     </div>
@@ -63,7 +123,7 @@
                     fill="#6FB4E1" />
             </svg>
             <span class="ml-2">Précédent</span>
-        </button> 
-        <button (click) ="addGood()"
+        </button>
+        <button (click)="nextSlide()"
             class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
     </div>
