--- a/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/disponibility/disponibility.component.html
@@ -4,7 +4,7 @@
       <h1 class="popping text-xl font-bold ">Disponibilité</h1>
     </div>
     <div (click)="$event.stopPropagation()" class="drop-calendar">
-      <mat-calendar #calendar (selectedChange)="select($event,calendar)" [dateClass]="dateClass()"></mat-calendar>
+      <mat-calendar #calendar (selectedChange)="select($event,calendar)" [dateClass]="dateCls"></mat-calendar>
     </div>
     <div *ngIf="backgroundSwitch == 'in'" class="fixed z-50 inset-0 overflow-y-auto" aria-labelledby="modal-title"
       role="dialog" aria-modal="true">
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="px-3 mt-5 flex flex-col md:flex-row justify-between">
-      <button [routerLink]="'/dashboard/bailleur/add-good/details'"
+      <button [routerLink]="'/dashboard/bailleur/add-good/media'"
         class="text-blue-2 px-6 py-2 rounded-md shadow font-700  text-base bg-white   btnhover font-medium flex flex-row items-center justify-center">
         <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
