--- a/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/post/post.component.html
@@ -122,7 +122,7 @@
         </div>
     </div>
     <div class="px-3 mt-5 flex flex-col md:flex-row justify-between">
-        <button
+        <button [routerLink]="'/dashboard/bailleur/add-good/disponibility'"
             class="text-blue-2 px-6 py-2 rounded-md shadow font-700  text-base bg-white   btnhover font-semibold flex flex-row items-center justify-center">
             <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
