--- a/src/app/modules/shared/goodcard/goodcard.component.html
+++ b/src/app/modules/shared/goodcard/goodcard.component.html
@@ -4,11 +4,11 @@
             <img class="object-cover shadow-lg rounded-lg" src="../../../../assets/images/bien1.png" alt="">
             <div class="flex flex-row justify-between items-end px-5 pb-30">
                 <span
-                    class="inline-flex items-center  px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
+                    class="inline-flex items-center mb-5  px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
                     Appartement
                 </span>
                 <button type="button" (click)="switchInput()"
-                    class=" flex-shrink-0 group relative rounded-full inline-flex items-center justify-center h-5 w-10 cursor-pointer focus:outline-none  focus:ring-offset-2 focus:ring-indigo-500"
+                    class=" flex-shrink-0 mb-5  group relative rounded-full inline-flex items-center justify-center h-5 w-10 cursor-pointer focus:outline-none  focus:ring-offset-2 focus:ring-indigo-500"
                     role="switch" aria-checked="false">
                     <span class="sr-only">Use setting</span>
                     <span aria-hidden="true"
